CHANGES
0.10.10 (December 13, 2022)
- fix undefined variable in pub info handler


0.10.9 (November 28, 2022)
- don't allow creators to be named ""
- fix tests so they don't break so easily when database is updated.

0.10.8 (October 23, 2022)
- dc.credit is doing double duty - it's storing update notices as well as production credits. so updates need to be more sophisticated - updates can be added, credits are fixed. This fixes a problem where credits pulled from the source file are not included in the credites metadata.

0.10.7 (October 7, 2022)
- tweak display of marc fields. "United States: D. Appleton and Company, 1918." instead of "United States :D. Appleton and Company ,1918."
- update tests
- make sure all scanned metadata is normal form composed.

0.10.5 (October 1, 2022)
- fixed bug in pubinfo.__str__ revealed by bugfix in ebookmaker renderer.

0.10.4 (September 30, 2022)
- don't skip last metadata item when it is followed immediately by the START marker
- add `produced by` as a synonym for `credit`
- add `self_closing` parameter to `GutenbergGlobals.insert_breaks()`
- dc.load_from_database() was not loading dc attributes corresponding to marc attributes Support for this has now been added.
- since dc.pubinfo is never False, dc.save() tried (in vain) to save empty pubinfos. No longer. 

0.10.3 (September 15, 2022)
- fix bug where list attributes to set were not checked for empty text items

0.10.2 (September 14, 2022)
- fix bug that wiped authorlist if an updated dc object was saved to the DB
- fix bug that failed the marc formated display when there is a pubinfo without a country
- refactor handle_languages so code can be used outside the dc object
- updated lxml dependency

0.10.1 (September 12, 2022)
- fixed bug where metadata upload failed if pubinfo was missing the country. 

0.10.0 (July 12, 2022)
- breaking change! moved notifier to be a Logger global because loggers are global